--- a/custom.css
+++ b/custom.css
@@ -250,7 +250,7 @@ top: 2px;
   display: flex;
   flex-direction: column;
 
-  margin-top: 36px;
+  margin-top:  4em;
 }
 
 
@@ -270,4 +270,8 @@ top: 2px;
   min-height: 52px;
   display: flex;
   align-items: center;
+}
+
+.product-card-content a {
+  display: none;
 }
