--- a/custom.css
+++ b/custom.css
@@ -275,3 +275,70 @@ top: 2px;
 .product-card-content a {
   display: none;
 }
+
+
+.custom-coming-soon-section{
+  padding: 3em 0;
+height: 500px;
+position: relative;
+}
+
+
+#custom-coming-soon-section-wrap {
+	position: absolute;
+	top: 3rem;
+	left: 0;
+	right: 0;
+	bottom: 3rem;
+	display: table;
+	width: 100%;
+	height: 100%;
+	min-height: 322px;
+	overflow: visible;
+}
+
+
+#custom-coming-soon-section-wrap .waves {
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	display: block;
+	min-width: 100%;
+	min-height: 70%;
+	margin: auto 0;
+}
+
+#custom-coming-soon-section-wrap  .text {
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	display: block;
+	width: 83%;
+	height: 100%;
+	margin: auto;
+}
+
+#custom-coming-soon-section-wrap  img, svg {
+	display: block;
+	overflow: visible;
+	pointer-events: none;
+}
+
+#custom-coming-soon-section-wrap  .group:before,
+#custom-coming-soon-section-wrap  .group:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+#custom-coming-soon-section-wrap  .group {
+  zoom: 1;
+}
+
+
+
+
+
