--- a/css/theme.css
+++ b/css/theme.css
@@ -111,6 +111,7 @@ pre {
 	display: flex;
 	flex-direction: column;
 	background: #FFF;
+	box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px !important;
 	transition: min-height 0.3s ease;
 	width: 100%;
 	border-top: 3px solid #EDEDED;
